# modernCV-in-QML

./: CMakeLists.txt  Section.qml  main.cpp  main.qml  qml.qrc
